--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-syntax-highlighter": "^6.0.3",
     "styled-components": "^2.2.3"
   },
   "scripts": {
