--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ REACT_APP_API_URL='https://xxxxx.execute-api.us-east-1.amazonaws.com/prod'
 REACT_APP_USER_POOL_ID='us-east-1_xxxxxx'
 REACT_APP_APP_CLIENT_ID='xxxxxxxxxx'
 REACT_APP_IDENTITY_POOL_ID='us-east-1:xxxxxxxxx'
+REACT_APP_MIXPANEL='xxxxxxxxxxxxxx'
